# DJHW2

./: pyproject.toml
config/: settings.py  urls.py
fixtures/: payments_fixture.json
lms/: models.py  serializers.py  urls.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/commands/: populate_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py
